[package]
name = "lmdb-er"
publish = false
# NB: When modifying, also modify html_root_url in lib.rs
version = "0.14.0"
authors = [
  "Dan Burkert <dan@danburkert.com>",
  "Victor Porof <vporof@mozilla.com>",
]
license = "Apache-2.0"
description = "Idiomatic and safe LMDB wrapper."
documentation = "https://docs.rs/lmdb-er"
homepage = "https://github.com/eventroot/lmdb-rs"
repository = "https://github.com/eventroot/lmdb-rs.git"
readme = "README.md"
keywords = ["LMDB", "database", "storage-engine", "bindings", "library"]
categories = ["database"]

exclude = [
  # Exclude CI config files from package.
  ".github/",
]

[lib]
name = "lmdb"

[workspace]
members = ["lmdb-sys"]

[dependencies]
bitflags = "2"
byteorder = "1"
libc = "0.2"

# In order to ensure that we test lmdb-er in CI against the in-tree version
# of lmdb-er-sys, we specify the dependency as a path here.
#
# But we can't publish the lmdb-er crate to crates.io with a path dependency,
# so we have to temporarily change this to point to the current version
# of lmdb-er-sys on crates.io when publishing lmdb-er to that crate registry.
#
# (See "Publishing to crates.io" in README.md for more information.)
lmdb-er-sys = { path = "./lmdb-sys" }

[dev-dependencies]
rand = "0.8"
tempdir = "0.3"

[features]
default = []
asan = ["lmdb-er-sys/asan"]
fuzzer = ["lmdb-er-sys/fuzzer"]
fuzzer-no-link = ["lmdb-er-sys/fuzzer-no-link"]
